Fix on manifest error, added correctly the good font to the good place, fixed the css on mobile that goes full banana

--- a/src/assets/partials/_front_landing.scss
+++ b/src/assets/partials/_front_landing.scss
@@ -17,11 +17,6 @@
         border-radius: 50%;
         margin: 0 auto 20px auto;
 
-        @media all and (max-width: 768px){
-          max-height: none;
-          max-width: none;
-        }
-
         img {
           width: 100%;
         }
