--- a/src/assets/partials/_front_layout.scss
+++ b/src/assets/partials/_front_layout.scss
@@ -31,7 +31,7 @@
 }
 
 .front-layout {
-  font-family: 'Fira-Mono', 'monospace';
+  font-family: 'Fira Mono', monospace;
   min-height: 100vh;
   background: #101010 fixed;
   background-size: cover;
